<resources>
    <string name="app_name">PicoSun</string>
    <string name="sign_out_button_text">Logout</string>
    <string name="profile_image">Profile</string>
    <string name="bt_scan_button_text">Scan</string>
    <string name="bt_red_led_button_text">Red</string>
    <string name="bt_yellow_led_button_text">Yellow</string>
    <string name="bt_green_led_button_text">Green</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="unknown_device">Unknown device</string>

    <string name="title_devices">Devices</string>
    <string name="bScan">Scan</string>
    <string name="sPairedDevices">Paired Devices</string>
    <string name="sNewDevices">New Devices Found</string>

    <!-- Scanned items -->
    <string name="sUVIndexHeader">UV Index</string>
    <string name="sUVIndex">99</string>
    <string name="sLuxHeader">Lux Index</string>
    <string name="sLux">99</string>
    <string name="sTempHeader">Temperature</string>
    <string name="sTemp">99</string>
    <string name="sPositionHeader">Position</string>
    <string name="sPos">99</string>
    <string name="sBatteryHeader">Battery</string>
    <string name="sBattery">99</string>

    <string name="action_scan">Scan</string>
    <string name="action_settings">Settings</string>

<!--    Location related strings -->
    <string name="use_location">Use location?</string>
    <string name="location_msg">This App wants to change your device settings to use\nGPS, Wi-Fi and cell networks for location</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>

</resources>
