<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.smallestwearable.picosun.LoginActivity">

    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/user_ProfilePic"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_image"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/user_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_button_text"
        android:visibility="gone"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/llScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/scan_bt_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_scan_button_text"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <ListView
        android:id="@+id/NewBTDev"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0.1dp" >
    </ListView>

    <LinearLayout
        android:id="@+id/llData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/uv_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/uv_index_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/sUVIndexHeader"/>
            <TextView
                android:id="@+id/uv_index_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/sUVIndex"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lux_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lux_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/sLuxHeader"/>
            <TextView
                android:id="@+id/lux_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/sLux"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

